2013-05-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  Pattern-fill support for the canvas terminal.

	* demo/html/webify_canvas.pl:  Re-order main loop to avoid trailing
	cruft in the output HTML page.  Include support for pattern fill.

	* src/datafile.c:  Remove use of isblank(), since too many of our
	supported platforms are mired back in the pre C99 era.

2013-05-08  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c (marquardt):  Zero-change in chisquare is now "BETTER"
	rather than "WORSE" to avoid extra iterations which would only
	increase lambda. 
	Patch #230.

	* src/fit.c (call_gnuplot):  Print useful info on undefined-function
	error. Derived from patchset #230.

	* src/fit.c (fit_command):  If the user supplies errors but any of them 
	are zero, there will be a divide by zero, trashing the fit.  Add a check 
	which prints info about the offending data point before aborting.
	Derived from patchset #230.

2013-05-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c (show_fit1):  Print asterisk instead of magic number -1 for
	iterations which increase the chisquare.

	* src/set.c (set_fit) docs/gnuplot.doc:  Options logfile, limit
	maxiter, start_lambda, lambda_factor, and script accept setting 'default'
	to restore default values or behaviour.  Avoid usage of magic constants.

	* src/fit.c|h:  Cleanup declarations.

	* src/fit.c|h src/save.c src/set.c src/show.c:  The command which can be
	executed by fit when it is interrupted can be changed with
	`set fit script`.

	* src/fit.c src/stdfun.c|h docs/gnuplot.doc:  Print p-value of the fit
	according to the chisquare-distribution.  Saved to user variable FIT_P.

	* src/fit.c (fit_command):  Discard data which contains NaN.  Necessary
	since df_readline() does not return DF_UNDEFINED in that case.  Now
	excluding data from the fit works the same for expressions with e.g. 1/0
	and NaN.

	* src/fit.c (pack_float):  Do not try to dereference NULL result from
	strchr().
